--- a/react-dashboard/src/components/sidebar/sidebar.scss
+++ b/react-dashboard/src/components/sidebar/sidebar.scss
@@ -2,6 +2,7 @@
     border-right: 0.5px solid rgb(230, 227, 227);
     min-height: 100vh;
     background-color: white;
+ 
     flex: 1;
 
     .top{
@@ -54,7 +55,7 @@
             }
             span{
                 font-size: 13px;
-                font-weight: 600;
+                font-weight: 600px;
                 color: #888;
                 margin-left: 10px;
             }
