--- a/react-dashboard/src/pages/home/home.scss
+++ b/react-dashboard/src/pages/home/home.scss
@@ -1,7 +1,14 @@
 .home{
  display: flex; 
  .homeContainer{
-    flex: 2;
+    flex: 6;
+
+    .widgets{
+      display: flex;
+      padding: 20px;
+      gap: 20px;
+    }
+
  }
 }
 
