--- a/react-dashboard/src/components/featured/featured.scss
+++ b/react-dashboard/src/components/featured/featured.scss
@@ -2,7 +2,8 @@
     flex: 2;
     -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
     box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
-    padding: 10px;
+    padding: 20px;
+    margin-bottom: auto;
 
     .top{
         display: flex;
@@ -40,6 +41,7 @@
         }
 
         .desc{
+            text-align: center;
             font-weight: 300;
             font-size: 12px;
             color: gray;
